Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-16794

[CI][C++] MinGW builds sometimes time out

    XMLWordPrintableJSON

Details

    Description

      When ccache is cold, the MinGW builds sometimes exceed the (large) 55 minutes timeout:
      https://github.com/apache/arrow/runs/6806190892?check_suite_focus=true

      C++ compile times have always been a concern on CI, but it may only grow as the codebase expands.

      Attachments

        Issue Links

          Activity

            People

              kou Kouhei Sutou
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 40m
                  1h 40m