ARROW-16794: [CI][C++][MinGW] Use debug build to reduce build time